--- a/Week 2/Day 3/Core/Profile Page/style.css
+++ b/Week 2/Day 3/Core/Profile Page/style.css
@@ -206,6 +206,7 @@ a{
     justify-content: space-between;
     padding-bottom: 10px;
     align-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .jpg{
     display: flex;
@@ -213,5 +214,9 @@ a{
     gap: 20px;
 } 
 .footer1{
-    background-color: #fff;    
-}  
+    background-color: #fff;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;   
+}
+a{
+    color: #000;
+}
