--- a/Week 2/Day 3/Core/Profile Page/style.css
+++ b/Week 2/Day 3/Core/Profile Page/style.css
@@ -22,8 +22,10 @@ header{
 #prof{
     color: #fff;
     font-weight: normal;
+    text-decoration: none;
+    text-indent: none;
 }
-a{
+#home, #connection{
     color: gray;
     text-decoration: none;
     text-indent: none;
