--- a/Week 2/Day 3/Core/Profile Page/style.css
+++ b/Week 2/Day 3/Core/Profile Page/style.css
@@ -30,6 +30,10 @@ header{
     text-decoration: none;
     text-indent: none;
 }
+#home:hover, #connection:hover{
+    color: #fff;
+    font-weight: normal;
+}
 .list, .nav1{
     display: flex;
     align-items: center;
@@ -45,7 +49,7 @@ header{
     height: 20px;
     color: #fff;
     border: none;
-    background-color: rgb(19, 150, 150);
+    background-color: #17A2B8;
 }
 .body{
     margin: 0 270px 0 270px;
@@ -103,15 +107,17 @@ header{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .bar2{
+    padding-left: 20px;
     height: 30px;
 }
 .bar3{
+    padding-left: 10px;
     height: 50px;
 }
 .bar1{
-    background-color: rgb(41, 134, 196);
+    background-color: #17A2B8;
     color: #fff;
-    height: 120px;
+    height: 145px;
     width: auto;
 }
 .not1{
@@ -129,7 +135,7 @@ header{
     background-color: #b8b8b8;
     color: rgb(61, 61, 61);
     width: 40px;
-    border-radius: 150px;
+    border-radius: 10px;
     border: 2px solid rgb(61, 61, 61);
     display: flex;
     justify-content: center;
@@ -140,7 +146,7 @@ header{
     border-right: 2px solid rgb(167, 164, 164);
     border-bottom: 2px solid rgb(167, 164, 164);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 10px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -226,4 +232,8 @@ header{
 }
 a{
     color: #000;
+}
+
+#date{
+    color: gray;
 }
